@@ -94,7 +94,7 @@ Executable git-annex
    base (>= 4.5 && < 4.9), monad-control, MonadCatchIO-transformers,
    IfElse, text, QuickCheck >= 2.1, bloomfilter, edit-distance, process,
    SafeSemaphore, uuid, random, dlist, unix-compat, async, stm (>= 2.3),
-   data-default
+   data-default, case-insensitive
   CC-Options: -Wall
   GHC-Options: -Wall
   Extensions: PackageImports
@@ -174,7 +174,7 @@ Executable git-annex
   if flag(Webapp)
     Build-Depends:
      yesod, yesod-default, yesod-static, yesod-form, yesod-core,
-     case-insensitive, http-types, transformers, wai, wai-logger, warp,
+     http-types, transformers, wai, wai-logger, warp,
      blaze-builder, crypto-api, hamlet, clientsession,
      template-haskell, data-default, aeson, network-conduit
     CPP-Options: -DWITH_WEBAPP
